--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
     font-family: monospace;
     font-size: 6.5rem;
     font-weight: bold;
+    color: blue;
+    backdrop-filter: blur(5px);
 }
 #fatherLabel {
     font-family: monospace;
